--- a/src/app/modules/meals/meal-details/meal-details.component.scss
+++ b/src/app/modules/meals/meal-details/meal-details.component.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 5%;
 
   ::ng-deep {
     &.mat-card-header {
@@ -25,7 +26,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2rem;
   }
 
   &__author,
@@ -35,5 +35,10 @@
     font-style: italic;
     font-size: 1.4rem;
     opacity: 0.5;
+  }
+
+  &__action {
+    margin-left: 1.5rem;
+    cursor: pointer;
   }
 }
