--- a/src/app/modules/meals/meal-edit/meal-edit.component.scss
+++ b/src/app/modules/meals/meal-edit/meal-edit.component.scss
@@ -2,6 +2,7 @@
   font-size: 1.4rem;
   min-width: 50rem;
   width: 100vw;
+  max-width: 60rem;
 
   ::ng-deep {
     &.mat-form-field {
@@ -12,6 +13,7 @@
   &__form {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
   }
 
   &__desc {
