--- a/src/app/modules/meals/meals-list/meal/meal.component.html
+++ b/src/app/modules/meals/meals-list/meal/meal.component.html
@@ -2,7 +2,11 @@
   <mat-card-header>
     <mat-card-title>{{ meal.name }}</mat-card-title>
   </mat-card-header>
-  <img class="meal__image" mat-card-image [src]="serverUrl + meal.image" alt="Meal image" />
+  
+  <div mat-card-image class="meal__image-wrapper">
+    <mat-icon class="meal__image-loading-icon"><mat-spinner diameter="50"> </mat-spinner></mat-icon>
+    <img class="meal__image" [src]="meal.image" alt="Meal image" />
+  </div>
 
   <p class="meal__author">{{ meal.author.name }} {{ meal.author.surname }}</p>
 
