--- a/src/app/modules/meals/meals-list/meal/meal.component.scss
+++ b/src/app/modules/meals/meals-list/meal/meal.component.scss
@@ -10,6 +10,32 @@
     }
   }
 
+  &__image-wrapper {
+    position: relative;
+    height: 0;
+    background-color: lightgray;
+    padding-bottom: 66.78082192%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__image-loading-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+
   &__author,
   &__time {
     margin: 0;
